# PerfLens

./: .env.example  .gitignore  PerfLens.docx  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: perflens-ci.yaml
configs/metrics/: metric_catalog.yaml
configs/scenarios/: database_bottleneck.yaml  error_storm.yaml  healthy.yaml  recovery.yaml  traffic_spike.yaml
configs/services/: inventory_service.yaml  order_service.yaml
configs/telemetry/: exporter.yaml
databricks/: README.md
databricks/notebooks/00_setup/: 01_environment_setup.ipynb  01_environment_setup.py  01_environment_setup_depricated.py
databricks/notebooks/01_bronze/: 01_kafka_stream_reader.py.ipynb  01_kafka_stream_reader.py.py  02_bronze_delta_writer.p.ipynb  02_bronze_delta_writer.p.py  New Notebook 2026-07-13 17:27:35.ipynb  (+1 more)
databricks/shared/: 01_config.ipynb  02_kafka_reader.ipynb  03_bronze_writer.ipynb
docker/: docker-compose.yaml
docker/kafka/: init-topics.sh
docker/otel-collector/: config.yaml
src/: main.py  temp.py
src/app/: application.py
src/common/: enums.py
src/config/: exceptions.py  loader.py  registry.py
src/mappers/: metric_mapper.py  runtime_registry.py  scenario_mapper.py  service_mapper.py
src/models/: metric.py  scenario.py  service.py  telemetry.py
src/perflens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/simulation/: distributions.py  event_factory.py  metric_generator.py  scenario_engine.py  simulator.py
src/telemetry/: instrument_registry.py  metric_recorder.py  provider.py
(+44 files in other folders)
